--- a/styles/variables.module.scss
+++ b/styles/variables.module.scss
@@ -5,4 +5,7 @@ $white: #fff !default;
 $primary: #E50914 !default;
 
 $base-font-size: 14px !default;
-$gutter: $base-font-size * 2 !default;
+
+$gutter: 15px !default;
+
+$z-index-header: 1 !default;
