add populars carousel

--- a/components/organisms/HomepageHighlight.module.scss
+++ b/components/organisms/HomepageHighlight.module.scss
@@ -1,7 +1,7 @@
 .root {
   position: relative;
   width: 100%;
-  aspect-ratio: 16/9;
+  aspect-ratio: 16/8;
   overflow: hidden;
 }
 
@@ -28,6 +28,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  width: calc(100% - 60px);
   padding: 30px;
   background: linear-gradient(to bottom, transparent 0%, rgba(0,0,0,.85) 100%);
 }
