--- a/components/organisms/Header.module.scss
+++ b/components/organisms/Header.module.scss
@@ -5,7 +5,22 @@
   top: 0;
   left: 0;
   z-index: $z-index-header;
-  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: calc(100% - (#{$gutter} * 2));
   padding: $gutter;
   background: rgba(0,0,0,.85);
+
+  @media (min-width: 769px) {
+    justify-content: space-between;
+  }
 }
+
+.tagline {
+  display: none;
+  
+  @media (min-width: 769px) {
+    display: block;
+  }
+} 
